# dream-machine

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  BOOTSTRAP_LOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FOLDER_STATUS.yml  GENESIS.md  LAB FINAL IMPLEMENTATION SPEC v0.md  LAB FINAL SPEC v0.md  LAB LLM-FACING CANON SPEC v0.md  LAB OPERATING ATLAS.md  LAB_TOPOLOGY.md  LEGACY_BOUNDARY.md  LEGACY_STATUS_MAP.md  MACHINE_REGISTRY.md  NOTICE  README.md  SECURITY.md  SERVICE_ALLOWLIST.md  SOURCE_MANIFEST.md  VOCABULARY.md  auth.ts  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
agent/: instructions.md
app/: app.config.ts  app.vue
docs/: ACTIVATION_STATES.md  ARCHITECTURE.md  AUTOMATION_DOCTRINE.md  BENCH_VS_BOOTSTRAP.md  CANYON.md  CUSTOMIZATION.md  DANGER_TIERS.md  DEVIN_ACP_BOOTSTRAP_NOTES.md  DREAM_MACHINE_PORTAL_UNDERSTANDING.md  DREAM_MACHINE_TENANT.md  DREAM_MACHINE_TRIPLE_TASK_LIST.md  ENVIRONMENT.md  FIELD_COMPLETION_RULES.md  GITHUB_APP_BOOTSTRAP_NOTES.md  HYBRID_DEPLOYMENT.md  HYBRID_DEPLOYMENT_TASKLIST.md  LLM_BUILDER_PLAN.md  OUTBOUND_MEMBRANE_NOTES.md  PROCESS_RUNTIME_SPEC.md  PROJECTION_DOCTRINE.md  RECEIPT_MOLDS.md  REGISTER_DOCTRINE.md  RUNTIME_TREE.md  dream-machine-actions.v0.yml  dream-machine-conflict-map.v0.yml  dream-machine-core-technologies.v0.yml  dream-machine-crossing-map.v0.yml  dream-machine-hybrid-topology.v0.yml  dream-machine-installable-topology.v0.yml  dream-machine-ownership.v0.yml  dream-machine-passport.v0.yml  dream-machine-portal-chief.v0.md  dream-machine-projections.v0.schema.json  dream-machine-projections.v0.yml  dream-machine-reference-map.v0.yml  dream-machine-vocabulary.v0.yml  envelope-jurisdiction.v0.yml  envelope-proposal-to-logline-package.v0.yml  envelope-sanitization.v0.yml  logline-jurisdiction.v0.yml
dream-machine/: README.md
e2e/: portal-chat-scene.spec.ts  portal-scene-acceptance.spec.ts
evals/: evals.config.ts  scene-andamento.eval.ts
lab/: __init__.py  adapters.py  authority.py  bootstrap.py  citation.py  cli.py  contracts.py  dream.py  errors.py  evaluator.py  fleet.py  foundation.py  grants.py  harness.py  inference.py  inspect.py  oauth.py  process_catalog.py  projections.py  receipt.py  runtime.py  sources.py  store.py
lib/: slack-app-auth.ts  slack-link-codes.ts  slack-links.ts
migrations/: 0001_logline_acts.sql  0002_realtime_publication.sql  0003_rls_and_search_path.sql
playbooks/: evidence_incomplete.md  grant_invalid.md  ledger_recovery.md
processes/: CURRENT_RUNNABLE_PROCESSES.md  PROCESS_CATALOG.md  PROCESS_CONTRACT_TEMPLATE.yml  attention-raise.v1.yml  evidence-closure.v1.yml  (+9 more)
(+308 files in other folders)
